23-06-2004 Qball <Qball@qballcow.nl>
	* removed the need of info.playlist in id3info and the popup/tray icon
	* middle mouse click on tray-icon pauses/plays

15-05-2004 Qball <Qball@qballcow.nl>
	* window title is now <song info > 
	* more old code removed
	* port number now also gets updated when typed in the entry. (wrong
signal attached) 
	* Fixed the Makefiles. now make dist works again .. (damn autotools,
the higher the version number the more crap it gives you)
	* Fixed a few compile warnings
	* Changed default port

14-05-2004 Qball <Qball@qballcow.nl>
	* Made track width in current playlist fixed width. so it wont get
huge on weird tags.
	* Set a max width
12-05-2004 Qball <Qball@qballcow.nl>
	* Removed some dead code..  

09-05-2004 Qball <Qball@qballcow.nl>
	* Double click/enter is now add song/artist/album in every tree view
	besides the directory browser.
	* changed IDS browser to Song tag browser.
	* If disconnected teh playlist manager is disabled in tray-icon mouse
	menu
	* id3 fields are cleared when going to the next or previous, so no
	wrong info is in fields


05-05-2004 Qball <Qball@qballcow.nl>
	* Fix for crash when not connected and opening preferences and moving
	to the server settings tab
	* Added starting tooltip to the tray icon

21-04-2004 Qball <Qball@qballcow.nl>
	* Added server settings to the preferences menu
	* added crossfading to the server settings in the preferences menu
	* Fixed anoying bug that caused the PM button to be inactive when the
disconnect button is clicked (with auto-connect enabled).
	* Changed the filter section to a more section 
	* Added a show information and a clear button to the playlist view in
the more section
	* ctrl-l in playlist window now grabs focus.
	* alt-r on main windows shows preferences (key mnemonic)

20-04-2004 Qball <Qball@qballcow.nl>
	* Added misc.[c|h]
	* Added hiding to tray icon and indication of hidden state in tray
	icon
	* Code cleanups